# domainbot-rs

./: .env  .gitignore  Cargo.toml  README.md  bindgen.sh  build.rs  go.mod  go.sum  servers.json  whoisparser.go
src/: lib.rs  main.rs
src/whois_parser/: ffi.rs  mod.rs
