[package]
name = "domainbot"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dotenv = "0.15.0"
serenity = "0.10.10"
tokio = { version = "1.17.0", features = ["full"] }
regex = "1.5.5"
lazy_static = "1.4.0"
whois-rust = { version = "1.5.0", features = ["tokio"] }
futures = "0.3.21"
whois = "0.1.0"